<resources>
    <string name="app_name">Pong_App</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <string name="ball_header">Ball</string>
    <string name="player_header">Player</string>
    <string name="game_header">Game</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Game Preferences -->
    <string name="difficulty_title">Difficulty</string>
    <string name="game_middle_net_title">Draw middle net</string>
    <string name="score_size_title">Winning score</string>
    <string name="net_color_title">Net color</string>
    <string name="background_color_title">Background color</string>
    <string name="background_image_title">Background image</string>
    <string name="background_is_image_title">Image background</string>
    <string name="draw_FPS_title">Display FPS</string>
    <string name="max_fps_title">Max FPS</string>
    <string name="limite_fps_title">Limite FPS</string>

    <!-- Ball Preferences -->
    <string name="ball_color_title">Ball color</string>
    <string name="ball_speed_increase_title">Enable speed increase</string>
    <string name="ball_speed_title">Ball speed</string>
    <string name="ball_size_title">Ball radius</string>
    <string name="max_ball_speed_title">Max ball speed</string>

    <!-- Player Preferences -->
    <string name="player1_color_title">Left player color</string>
    <string name="player2_color_title">Right player color</string>
    <string name="score_color_title">Score color</string>
    <string name="player_height_title">Player height</string>
    <string name="player_width_title">Player width</string>
    <string name="player_spacing_title">Player spacing</string>

</resources>