<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!--
    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>
    -->

    -------------------------------------------------------------


    <PreferenceCategory app:title="@string/game_header">

        <ListPreference
            app:defaultValue="0.1"
            app:entries="@array/game_difficulty_entries"
            app:entryValues="@array/game_difficulty_values"
            app:key="difficulty"
            app:title="@string/difficulty_title"
            app:useSimpleSummaryProvider="true"
            />

        <CheckBoxPreference
            app:key="drawFPS"
            app:title="@string/draw_FPS_title"
            />

        <SwitchPreferenceCompat
            app:key="bgIsImage"
            app:title="@string/background_is_image_title"
            app:defaultValue="true"/>

        <ListPreference
            app:defaultValue="bg_space_720"
            app:entries="@array/background_image_entries"
            app:entryValues="@array/background_image_values"
            app:key="backgroundImage"
            app:title="@string/background_image_title"
            app:useSimpleSummaryProvider="true"
            app:dependency="bgIsImage"
            />

        <ListPreference
            app:defaultValue="00000000"
            app:entries="@array/background_color_entries"
            app:entryValues="@array/background_color_values"
            app:key="backgroundColor"
            app:title="@string/background_color_title"
            app:useSimpleSummaryProvider="true"
            />


        <SeekBarPreference
            app:key="maxScore"
            app:title="@string/score_size_title"
            app:min="5"
            android:max="50"
            app:defaultValue="10"
            />

        <CheckBoxPreference
            app:key="middleNet"
            app:title="@string/game_middle_net_title"
            />

        <ListPreference
            app:defaultValue="FFFFFFFF"
            app:entries="@array/color_entries"
            app:entryValues="@array/color_values"
            app:key="netColor"
            app:title="@string/net_color_title"
            app:useSimpleSummaryProvider="true"
            app:dependency="middleNet"
            />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/ball_header">

        <SeekBarPreference
            app:key="ballSize"
            app:title="@string/ball_size_title"
            app:min="10"
            android:max="35"
            app:defaultValue="20"
            />

        <SeekBarPreference
            app:key="ballSpeed"
            app:title="@string/ball_speed_title"
            app:min="300"
            android:max="1000"
            app:defaultValue="500"
            />

        <SwitchPreferenceCompat
            app:key="ballSpeedIncrease"
            app:title="@string/ball_speed_increase_title"
            app:defaultValue="true"/>

        <ListPreference
            app:defaultValue="FFFFFFFF"
            app:entries="@array/color_entries"
            app:entryValues="@array/color_values"
            app:key="ballColor"
            app:title="@string/ball_color_title"
            app:useSimpleSummaryProvider="true"
            />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/player_header">

        <SeekBarPreference
            app:key="playerHeight"
            app:title="@string/player_height_title"
            app:min="15"
            android:max="33"
            app:defaultValue="25"
            />

        <SeekBarPreference
            app:key="playerWidth"
            app:title="@string/player_width_title"
            app:min="10"
            android:max="50"
            app:defaultValue="25"
            />

        <SeekBarPreference
            app:key="playerSpacing"
            app:title="@string/player_spacing_title"
            app:min="10"
            android:max="200"
            app:defaultValue="50"
            />

        <ListPreference
            app:defaultValue="FFFFFFFF"
            app:entries="@array/color_entries"
            app:entryValues="@array/color_values"
            app:key="player1Color"
            app:title="@string/player1_color_title"
            app:useSimpleSummaryProvider="true"
            />


        <ListPreference
            app:defaultValue="FFFFFFFF"
            app:entries="@array/color_entries"
            app:entryValues="@array/color_values"
            app:key="player2Color"
            app:title="@string/player2_color_title"
            app:useSimpleSummaryProvider="true"
            />

        <ListPreference
            app:defaultValue="FFFFFFFF"
            app:entries="@array/color_entries"
            app:entryValues="@array/color_values"
            app:key="scoreColor"
            app:title="@string/score_color_title"
            app:useSimpleSummaryProvider="true"
            />



    </PreferenceCategory>

</PreferenceScreen>